# desktop-icons-ng

./: HISTORY.md  README.md  adieu.js  askConfirmPopup.js  askNamePopup.js  askRenamePopup.js  copiar.sh  createThumbnail.js  dbusUtils.js  desktopGrid.js  desktopIconItem.js  desktopIconsUtil.js  desktopManager.js  desktopicons.js  desktopiconsng.js  ding.js  emulateX11WindowType.js  enums.js  export-zip.sh  extension.js  fileItem.js  fileItemMenu.js  gnomeShellOverride.js  local_install.sh  meson.build  metadata.json  preferences.js  prefs.js  showErrorPopup.js  stylesheet.css  templateManager.js  templatesScriptsManager.js  thumbnails.js  tmpDesktopManager.js  visibleArea.js
debian/: changelog  control  copyright  rules
debian/patches/: 0001-Remove-unconditional-Gettext.bindtextdomain-call.patch  0002-fix-gnome-3.36.patch  series
debian/source/: include-binaries
po/: LINGUAS  POTFILES.in  be.po  ca.po  cs.po  da.po  de.po  ding.pot  es.po  fi.po  fr.po  fur.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  nl.po  oc.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  untitled.pot  zh_CN.po  zh_TW.po
po/desktop-icons-ng/po/: oc.po
schemas/: meson.build  org.gnome.shell.extensions.adieu.gschema.xml  org.gnome.shell.extensions.ding.gschema.xml
